changes for slash

--- a/index.html
+++ b/index.html
@@ -28,31 +28,31 @@
                 <div>
                     <p class="m-2 flex justify-between  font-[Satoshi-Regular]  hover:rotate-1">
                       
-                        <span >  <a href="/pages/about.html">About</a></span>
+                        <span >  <a href="./pages/about.html">About</a></span>
                        </a> 
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-right"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                     </p>
 
                     <p class="m-2 flex justify-between  font-[Satoshi-Regular]  hover:rotate-1">
                        
-                        <span> <a href="/pages/project.html">Project</a> </span>
+                        <span> <a href="./pages/project.html">Project</a> </span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-right"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                     </p>
 
                     <p class="m-2 flex justify-between  font-[Satoshi-Regular]  hover:rotate-1">
 
-                        <span><a href="/pages/resume.html"> Resume</a>
+                        <span><a href="./pages/resume.html"> Resume</a>
                            </span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-right"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                     </p>
 
                     <p class="m-2 flex justify-between  font-[Satoshi-Regular]  hover:rotate-1">
-                        <span><a href="/pages/tools.html"> Tools</a>
+                        <span><a href="./pages/tools.html"> Tools</a>
                         </span>                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-right"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                     </p>
 
                     <p class="m-2 flex justify-between  font-[Satoshi-Regular]  hover:rotate-1">
-                        <span><a href="pages/ama.html"> Ama</a>
+                        <span><a href=".pages/ama.html"> Ama</a>
                         </span>                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-move-right"><path d="M18 8L22 12L18 16"/><path d="M2 12H22"/></svg>
                     </p>
                 </div>
