changes for slashed

--- a/pages/about.html
+++ b/pages/about.html
@@ -25,11 +25,11 @@
                     <nav class="bg-white shadow-lg py-4 rounded-full">
                         <ul class="flex justify-around text-black">
                             <li class="font-[Satoshi-Regular] text-xl"> <a href="./index.html">Home</a>  </li>
-                            <li class="font-[Satoshi-Regular] text-xl"> <a href="./pages/about.html">About</a>  </li>
-                            <li class="font-[Satoshi-Regular] text-xl"> <a href="./pages/project.html">Projects</a>  </li>
-                            <li class="font-[Satoshi-Regular] text-xl"> <a href="./pages/resume.html">Resume</a>  </li>
-                            <li class="font-[Satoshi-Regular] text-xl"> <a href="./pages/tools.html">Tools</a>  </li>
-                            <li class="font-[Satoshi-Regular] text-xl"> <a href="./pages/ama.html">Ama</a>  </li>
+                            <li class="font-[Satoshi-Regular] text-xl"> <a href="./pages./about.html">About</a>  </li>
+                            <li class="font-[Satoshi-Regular] text-xl"> <a href="./pages./project.html">Projects</a>  </li>
+                            <li class="font-[Satoshi-Regular] text-xl"> <a href="./pages./resume.html">Resume</a>  </li>
+                            <li class="font-[Satoshi-Regular] text-xl"> <a href="./pages./tools.html">Tools</a>  </li>
+                            <li class="font-[Satoshi-Regular] text-xl"> <a href="./pages./ama.html">Ama</a>  </li>
                         </ul>
                         
                     </nav>
